<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView2"
            style="?android:attr/listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tag_number" />

        <EditText
            android:id="@+id/cow_tag_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:digits="0123456789."
            android:ems="10"
            android:hint="@string/hint_edit_text_tag_number"
            android:imeOptions="actionDone"
            android:inputType="numberSigned"
            android:maxLength="4" />

        <TextView
            android:id="@+id/textView3"
            style="?android:attr/listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cow_breed" />

        <Spinner
            android:id="@+id/cow_breed_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp" />

        <TextView
            android:id="@+id/textView4"
            style="?android:attr/listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cow_color" />

        <Spinner
            android:id="@+id/cow_color_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp" />

        <TextView
            android:id="@+id/textView5"
            style="?android:attr/listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cow_birthday" />

        <Button
            android:id="@+id/cow_birthDay_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:text="Button" />

        <TextView
            android:id="@+id/textView6"
            style="?android:attr/listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cow_mother" />

        <Spinner
            android:id="@+id/cow_mother_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:entries="@string/no_mother" />

        <TextView
            android:id="@+id/textView7"
            style="?android:attr/listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cow_father" />

        <Spinner
            android:id="@+id/cow_father_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp" />

        <TextView
            android:id="@+id/textView12"
            style="?android:attr/listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="@string/graph_yield_textView" />

        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/line_chart_milk_yield"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:layout_marginTop="16dp" >

        </com.github.mikephil.charting.charts.LineChart>


        <TextView
            android:id="@+id/textView14"
            style="?android:attr/listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="@string/graph_fat_textView" />

        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/line_chart_milk_fat"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:layout_marginTop="16dp">

        </com.github.mikephil.charting.charts.LineChart>


        <TextView
            android:id="@+id/textView15"
            style="?android:attr/listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="@string/graph_weight_textView" />

        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/line_chart_cow_weight"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:layout_marginTop="16dp" />

        <Button
            android:id="@+id/cow_add_metrics_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/add_metrics" />

    </LinearLayout>


</ScrollView>